ADD OpenAPI update : account params in body
